Page MenuHome GnuPG

keydb_get_keyblock failed with cv448 key
Closed, ResolvedPublic

Description

Hi,
gpg: keydb_get_keyblock failed: Invalid object
Is anyone got this issue?
Not just sign-only Curve448 subkey, gpg will fail after any subkey(RSA/ECC [S]/[E]/[A]/[C]) is created when a keypair is generated with Curve448.
gpg can not list new generating keys after this failure.

Details

Version
2.3.2

Event Timeline

William created this object in space S1 Public.
werner renamed this task from gpg: keydb_get_keyblock failed: Invalid object to keydb_get_keyblock failed with cv448 key .Sep 20 2021, 7:35 PM
werner triaged this task as High priority.
werner edited projects, added gnupg (gpg23), OpenPGP; removed gnupg.
werner set Version to 2.3.2.
This comment was removed by gniibe.

Bug in creating such a blob is fixed in rG08a3a4db27dc: kbx: A 20 byte fingerprint is right filled in version 2 blob..

We need fix to specify version 5 key for ed448/cv448, for --edit-key/addkey.

gniibe added a project: Restricted Project.Sep 29 2021, 4:46 AM

Use of version 5 format for Ed448/X448 was pushed by rG86cb04a23d2b: gpg: Ed448 and X448 are only for v5 (for subkey)..

Fixed in GnuPG 2.3.3.